<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/levanh13"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/more"
        android:src="@drawable/more"
        app:layout_constraintLeft_toRightOf="@+id/tv_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/threads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:contentDescription="@string/threads"
        android:src="@drawable/threads"
        app:layout_constraintLeft_toRightOf="@id/img_more"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:contentDescription="@string/create"
        android:src="@drawable/create_button"
        app:layout_constraintLeft_toRightOf="@id/threads"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:contentDescription="@string/create"
        android:src="@drawable/menu"
        app:layout_constraintLeft_toRightOf="@id/create"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/more"
        android:src="@color/black"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="@+id/tv_profile"
        app:layout_constraintRight_toRightOf="@id/img_more"
        app:layout_constraintTop_toBottomOf="@id/tv_profile" />

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/img_profile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_profile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/posts"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:gravity="center"
            android:text="@string/followers"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:gravity="center"
            android:text="@string/_following"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@id/tv_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_profile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/le_van_anh"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:text="@string/digital_googdies_designer_vananh"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:text="@string/everything_is_degigned"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_and_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_ripper"
            android:hint="@string/edit_profile"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            app:backgroundTint="@null" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_ripper"
            android:hint="@string/share_profile"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            app:backgroundTint="@null" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_and_share">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/story_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                tools:listitem="@layout/story_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/your_posts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:listitem="@layout/your_post_layout" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="1000dp" />
        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>