<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view_tag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@id/linear_bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/white"
            android:contentDescription="@string/home"
            android:src="@drawable/home" />

        <Space
            android:layout_width="68dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/search"
            android:src="@drawable/search" />

        <Space
            android:layout_width="68dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/create"
            android:src="@drawable/create_button" />

        <Space
            android:layout_width="68dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_reels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/reels"
            android:src="@drawable/reels" />

        <Space
            android:layout_width="68dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_me"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:contentDescription="@string/me" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>